# connect-4

./: .gitignore  Cargo.toml  README.md
api_usage_example/: Cargo.toml
api_usage_example/src/: gpt_scrap.rs  main.rs  minimax_conversion.rs
connect_api/: Cargo.toml
connect_api/src/: chat_gpt.rs  helpers.rs  main.rs  minimax.rs  models.rs  otto_minimax.rs  routes.rs
frontend/: Cargo.toml  index.html  index.scss
frontend/src/: api.rs  app.rs  board.rs  connect_minimax.rs  main.rs  menu_bar.rs  nav_bar.rs  otto_minimax.rs  router.rs
frontend/src/pages/: connect4_game.rs  connect4_rules.rs  home.rs  mod.rs  toot_otto_game.rs  toot_otto_rules.rs
src/: main.rs  menu_bar.rs
