[package]
name = "connect_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
reqwest = {version = "0.11.13", features = ["json"]}
lru_time_cache = "0.11.11"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

futures = "0.3" # for our async / await blocks
rand = "0.8.5"