[package]
name = "connect-4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"] }
rocket = {version = "0.5.0-rc.2", features = ["json"]}
reqwest = {version = "0.11.13", features = ["json"]}
lru_time_cache = "0.11.11"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

futures = "0.3" # for our async / await blocks
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
rand = "0.8.5"
wasm-bindgen-futures = "0.4.42"
wasm-bindgen = "0.2.92"

[dependencies.web-sys]
version = "0.3"
features = [
]