[package]
name = "connect-4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17"
yew = { version = "0.21", features = ["csr"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
gloo-net = "0.5"
rand = "0.8.5"
web-sys = "0.3"
log = "0.4"
